# ecs-python

./: .travis.yml  CHANGES  CMakeLists.txt  EcsPython.sln  LICENSE  README.md  readme_windows.txt
EcsDemo/: EcsDemo.vcproj
EcsPython/Source/: DspThreadUnix.h  DspThreadWin.h  EcsMacros.cpp  EcsMacros.h  EcsPython.cpp
WindowsDebugFix/: Read me.txt
WindowsDebugFix/Python33/: pyconfig.h
example/: CMakeLists.txt  main.cpp
include/: EcsMacros.h  EcsPython.h
include/dspatch/: DspThreadWin.h
include/ecspython/: EcsMacros.h
src/: EcsMacros.cpp  EcsPython.cpp  EcsPython.vcproj
tests/: CMakeLists.txt  main.cpp
win_fix/Python27/: pyconfig.h
